Re-configured Gradle build script